--- a/MapBlender/MapBlender/Base.lproj/Main.storyboard
+++ b/MapBlender/MapBlender/Base.lproj/Main.storyboard
@@ -24,6 +24,12 @@
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VMU-wn-8M3" customClass="GMSMapView" colorLabel="IBBuiltInLabel-Gray">
                                 <rect key="frame" x="0.0" y="46" width="375" height="621"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="default_marker.png" translatesAutoresizingMaskIntoConstraints="NO" id="fJl-fh-cF9">
+                                        <rect key="frame" x="127" y="140" width="68" height="84"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                </subviews>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v5x-xc-E1E">
@@ -56,6 +62,7 @@
                     </view>
                     <connections>
                         <outlet property="addressLabel" destination="v5x-xc-E1E" id="Cy2-rF-5Ha"/>
+                        <outlet property="mapCenterPinImage" destination="fJl-fh-cF9" id="jb1-i6-hWY"/>
                         <outlet property="mapView" destination="VMU-wn-8M3" id="pQM-WR-72T"/>
                         <outlet property="refreshBtn" destination="bB8-5k-cuz" id="9VF-dA-PXC"/>
                     </connections>
@@ -66,6 +73,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="default_marker.png" width="21" height="38"/>
         <image name="filter" width="25" height="25"/>
     </resources>
 </document>
